--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark bg-primary">
   <!-- Navbar content -->
   <form class="form-inline">
-    <input [(ngModel)]="searchValue" class="form-control mr-sm-2" type="search" name="seachvalue" placeholder="Search" aria-label="Search">
+    <input [(ngModel)]="searchValue" class="form-control mr-sm-2" type="search" name="searchvalue" placeholder="Search" aria-label="Search">
     <button (click)="searchMovie()" class="btn btn-outline my-2 my-sm-0" type="button">Search</button>
     <div class="form-group">
       <label><input [(ngModel)]="searchoption" type="radio" value="name" name="searchoption"> Search by Name</label>
@@ -15,13 +15,14 @@
   <div class="media text-muted pt-3">
     <img data-src="holder.js/32x32?theme=thumb&amp;bg=007bff&amp;fg=007bff&amp;size=1" alt="32x32" class="mr-2 rounded" style="width: 32px; height: 32px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2232%22%20height%3D%2232%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1667bfa57ce%20text%20%7B%20fill%3A%23007bff%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A2pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1667bfa57ce%22%3E%3Crect%20width%3D%2232%22%20height%3D%2232%22%20fill%3D%22%23007bff%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2211.84375%22%20y%3D%2216.95625%22%3E32x32%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
     <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-      <strong class="d-block text-gray-dark">Title:{{movie.Title}} Year:{{movie.Year}} Genre:{{movie.Genre}}</strong>
+      <strong class="d-block text-gray-dark">
+      Title:{{movie.Title}} Year:{{movie.Year}} Genre:{{movie.Genre}}</strong>
       {{movie.Plot}}
       <button (click)="addToMustWatch()" class="btn btn-outline">Add to must watch</button>
     </p>
   </div>
   <small class="d-block text-right mt-3">
-    <a href="#">All updates</a>
+    <button class="btn btn-danger"type="button" (click)="showResult=!showResult">Close</button>
   </small>
 </div>
 
@@ -33,8 +34,23 @@
       <strong class="d-block text-gray-dark">Title:{{movie.Title}} Year:{{movie.Year}} Genre:{{movie.Genre}}</strong>
       {{movie.Plot}}
     </p>
+    <button (click)="addToArchive(movie)" type="button" class="btn btn-outline">Add to archive</button>
   </div>
   <small class="d-block text-right mt-3">
-    <a href="#">All updates</a>
   </small>
 </div>
+
+<div class="my-3 p-3 bg-white rounded shadow-sm">
+    <h6 class="border-bottom border-gray pb-2 mb-0">Archived</h6>
+    <div class="media text-muted pt-3" *ngFor="let movie of archived">
+      <img data-src="holder.js/32x32?theme=thumb&amp;bg=007bff&amp;fg=007bff&amp;size=1" alt="32x32" class="mr-2 rounded" style="width: 32px; height: 32px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2232%22%20height%3D%2232%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1667bfa57ce%20text%20%7B%20fill%3A%23007bff%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A2pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1667bfa57ce%22%3E%3Crect%20width%3D%2232%22%20height%3D%2232%22%20fill%3D%22%23007bff%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2211.84375%22%20y%3D%2216.95625%22%3E32x32%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+      <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+        <strong class="d-block text-gray-dark">Title:{{movie.Title}} Year:{{movie.Year}} Genre:{{movie.Genre}}</strong>
+        {{movie.Plot}}
+      </p>
+      <button (click)="setMustWatch(movie)" type="button" class="btn btn-outline">Must watch</button>
+      <button (click)="deleteMovie(movie)" type="button" class="btn btn-danger">Delete</button>
+    </div>
+    <small class="d-block text-right mt-3">
+    </small>
+  </div>
